myapp-ingress/myapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    argocd.argoproj.io/tracking-id: myapp-ingress:networking.k8s.io/Ingress:ui/myapp-ingress
spec:
  ingressClassName: nginx  # This is the key change
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: visaas-fuse-ui-service
                port:
                  number: 80
